--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,5 @@
 envlist = py32, py33, py34, py35, py36
 
 [testenv]
-commands = {envpython} setup.py test
-deps =
+commands = python setup.py test
 
