--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,9 @@
 envlist = py32, py33, py34, py35, py36
 
 [testenv]
-commands = python setup.py test
-
+commands = pytest
+deps =
+    pytest-pep8
+    pytest-cov
+    pytest
+    coverage
